Improving the css

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--Header / Navbar -->
     <header>
-        <nav class="navbar">
+        <nav class="navbar section-content">
 
             <a href="#" class="nav-logo" >
-                <h2 class="logo-text">🧵Crochet</h2>                
+                <h2 class="logo-text" style="color:#28282B">🧵EYMI CROCHET SHOP</h2>                
             </a>
             <ul class="nav-menu">
 
@@ -36,7 +37,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Contanct</a>
+                    <a href="#" class="nav-link">Contact</a>
                 </li>
 
 
@@ -46,6 +47,28 @@
 
 
     </header>
+
+    <main>
+        <!--Hero section-->
+        <section class="hero-section">
+        <div class="section-content">
+        <div class="hero details">
+        <h2 class="title">Best Crochet Shop</h2>
+        <h3 class="subtitle">Make your day great with our special
+            aesthetic handmade crochet</h3>
+            <p class="descriptiom">Welcome to our crochet paradise, where every stitch tells a love works
+                 that have a warmth feelings</p>
+                 <div class="buttons">
+                    <a href="#" class="button order-now">Order Now</a>
+                    <a href="#" class="button contact-us">Contact Us</a>
+                 </div>
+                </div>
+                <div class="hero image wrapper"></div>
+                <img src="images/flower1.jpg" alt="Cutie tulips" class="hero-image">
+
+               </div>
+          </section>
+        </main>
     
 </body>
 </html>
