--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="navbar section-content">
 
             <a href="#" class="nav-logo" >
-                <h2 class="logo-text" style="color:#28282B">🧵EYMI CROCHET SHOP</h2>                
+                <h2 class="logo-text">🧵EYMI CROCHET SHOP</h2>                
             </a>
             <ul class="nav-menu">
 
@@ -51,20 +51,30 @@
     <main>
         <!--Hero section-->
         <section class="hero-section">
+
         <div class="section-content">
-        <div class="hero details">
+
+        <div class="hero-details">
+
         <h2 class="title">Best Crochet Shop</h2>
+
         <h3 class="subtitle">Make your day great with our special
             aesthetic handmade crochet</h3>
-            <p class="descriptiom">Welcome to our crochet paradise, where every stitch tells a love works
-                 that have a warmth feelings</p>
+
+            <p class="description">Welcome to our crochet paradise, where each stitch conveys
+                 a sentiment of love and warmth</p>
+
                  <div class="buttons">
+
                     <a href="#" class="button order-now">Order Now</a>
+
                     <a href="#" class="button contact-us">Contact Us</a>
+
                  </div>
                 </div>
-                <div class="hero image wrapper"></div>
+                <div class="hero image wrapper">
                 <img src="images/flower1.jpg" alt="Cutie tulips" class="hero-image">
+                </div>
 
                </div>
           </section>
