Do the About us section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,26 @@
 
                </div>
           </section>
+
+          <!-- About section-->
+           <section class="about-section">
+            <div class="section-content">
+                <div class="about-image-wrapper">
+                    <img src="images/about.jpg" alt="About" class="about-image">
+                    </div>
+                    <div class="about-details">
+                        <h2 class="section-title">About Us</h2>
+                        <p>I am a person who is positive about every aspect of life. There are many things I like to do, to see, and to experience. I like to read, I like to write; I like to think,
+                             I like to dream; I like to talk, I like to listen.</p>
+                        <div class="social-linl-list">
+                            <a href="a" class="social-link"><i class="fa-brands fa-facebook"></i> fast</a>
+                            <a href="a" class="social-link"><i class="fa-brands fa-instagram"></i> fast</a>
+                            <a href="a" class="social-link"><i class="fa-brands fa-twitter"></i> fast</a>
+                        </div>
+                    </div>
+            </div>
+           </section>
+
         </main>
 
         <script src="script.js"></script>
