--- a/index.html
+++ b/index.html
@@ -93,14 +93,74 @@
                         <h2 class="section-title">About Us</h2>
                         <p>I am a person who is positive about every aspect of life. There are many things I like to do, to see, and to experience. I like to read, I like to write; I like to think,
                              I like to dream; I like to talk, I like to listen.</p>
-                        <div class="social-linl-list">
-                            <a href="a" class="social-link"><i class="fa-brands fa-facebook"></i> fast</a>
-                            <a href="a" class="social-link"><i class="fa-brands fa-instagram"></i> fast</a>
-                            <a href="a" class="social-link"><i class="fa-brands fa-twitter"></i> fast</a>
+                        <div class="social-link-list">
+                            <a href="a" class="social-link"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="a" class="social-link"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="a" class="social-link"><i class="fa-brands fa-twitter"></i></a>
                         </div>
                     </div>
             </div>
            </section>
+
+           <!-- Menu section-->
+            <section class="menu-section">
+                <div class="section-content"> 
+                    <ul class="menu-list">
+                        <li class="menu-item">
+                            <img src="images/Blooming Tulip.jpg" alt="first product"
+                             class="menu-image">
+                             <h3 class="name">Blooming Tulip</h3>
+                             <p class="text">Tulips bloom like
+                                 whispered dreams in the gardens quiet grace, painting the earth with colors born of 
+                                 sunlight and springs embrace. Each petal holds a promise of beauty,
+                                fleeting yet forever felt.</p>
+                        </li>
+                        <li class="menu-item">
+                            <img src="images/Blooming Tulip.jpg" alt="first product"
+                             class="menu-image">
+                             <h3 class="name">Blooming Tulip</h3>
+                             <p class="text">Tulips bloom like
+                                 whispered dreams in the gardens quiet grace, painting the earth with colors born of 
+                                 sunlight and springs embrace. Each petal holds a promise of beauty,
+                                fleeting yet forever felt.</p>
+                        </li> <li class="menu-item">
+                            <img src="images/Blooming Tulip.jpg" alt="first product"
+                             class="menu-image">
+                             <h3 class="name">Blooming Tulip</h3>
+                             <p class="text">Tulips bloom like
+                                 whispered dreams in the gardens quiet grace, painting the earth with colors born of 
+                                 sunlight and springs embrace. Each petal holds a promise of beauty,
+                                fleeting yet forever felt.</p>
+                        </li> <li class="menu-item">
+                            <img src="images/Blooming Tulip.jpg" alt="first product"
+                             class="menu-image">
+                             <h3 class="name">Blooming Tulip</h3>
+                             <p class="text">Tulips bloom like
+                                 whispered dreams in the gardens quiet grace, painting the earth with colors born of 
+                                 sunlight and springs embrace. Each petal holds a promise of beauty,
+                                fleeting yet forever felt.</p>
+                        </li> <li class="menu-item">
+                            <img src="images/Blooming Tulip.jpg" alt="first product"
+                             class="menu-image">
+                             <h3 class="name">Blooming Tulip</h3>
+                             <p class="text">Tulips bloom like
+                                 whispered dreams in the gardens quiet grace, painting the earth with colors born of 
+                                 sunlight and springs embrace. Each petal holds a promise of beauty,
+                                fleeting yet forever felt.</p>
+                        </li> <li class="menu-item">
+                            <img src="images/Blooming Tulip.jpg" alt="first product"
+                             class="menu-image">
+                             <h3 class="name">Blooming Tulip</h3>
+                             <p class="text">Tulips bloom like
+                                 whispered dreams in the gardens quiet grace, painting the earth with colors born of 
+                                 sunlight and springs embrace. Each petal holds a promise of beauty,
+                                fleeting yet forever felt.</p>
+                        </li>
+
+                    </ul>
+
+                </div>
+            </section>
 
         </main>
 
