Add product section

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
            <!-- Menu section-->
             <section class="menu-section">
+                <h2 class="section-title">Our Product</h2>
                 <div class="section-content"> 
                     <ul class="menu-list">
                         <li class="menu-item">
@@ -116,45 +117,37 @@
                                 fleeting yet forever felt.</p>
                         </li>
                         <li class="menu-item">
-                            <img src="images/Blooming Tulip.jpg" alt="first product"
+                            <img src="images/pinktulips.jpg" alt="secocnd product"
                              class="menu-image">
-                             <h3 class="name">Blooming Tulip</h3>
-                             <p class="text">Tulips bloom like
-                                 whispered dreams in the gardens quiet grace, painting the earth with colors born of 
-                                 sunlight and springs embrace. Each petal holds a promise of beauty,
-                                fleeting yet forever felt.</p>
+                             <h3 class="name">Pink tulips</h3>
+                             <p class="text">Pink tulips bloom with gentle charm, a soft blush of spring that speaks of affection,
+                                 grace, and quiet joy. In their petals lies the poetry of love unspoken and kindness in full bloom.</p>
                         </li> <li class="menu-item">
-                            <img src="images/Blooming Tulip.jpg" alt="first product"
+                            <img src="images/lavender.jpg" alt="third product"
                              class="menu-image">
-                             <h3 class="name">Blooming Tulip</h3>
-                             <p class="text">Tulips bloom like
-                                 whispered dreams in the gardens quiet grace, painting the earth with colors born of 
-                                 sunlight and springs embrace. Each petal holds a promise of beauty,
-                                fleeting yet forever felt.</p>
+                             <h3 class="name">Lavender</h3>
+                             <p class="text">Lavender sways in the breeze like a lullaby in bloom, its fragrance a soothing whisper that calms the soul
+                                 and brightens the spirit. A symbol of serenity and timeless beauty, it colors the world in hues of peace.</p>
                         </li> <li class="menu-item">
-                            <img src="images/Blooming Tulip.jpg" alt="first product"
+                            <img src="images/rose.jpg" alt="fourth product"
                              class="menu-image">
-                             <h3 class="name">Blooming Tulip</h3>
-                             <p class="text">Tulips bloom like
-                                 whispered dreams in the gardens quiet grace, painting the earth with colors born of 
-                                 sunlight and springs embrace. Each petal holds a promise of beauty,
-                                fleeting yet forever felt.</p>
+                             <h3 class="name">Rose</h3>
+                             <p class="text">The rose, timeless and tender, speaks the language of the heart with
+                                 every petal—soft as a secret, bold as love itself. Its beauty blooms in passion, remembrance, and grace.</p>
                         </li> <li class="menu-item">
-                            <img src="images/Blooming Tulip.jpg" alt="first product"
+                            <img src="images/heart.jpg" alt="first product"
                              class="menu-image">
-                             <h3 class="name">Blooming Tulip</h3>
-                             <p class="text">Tulips bloom like
-                                 whispered dreams in the gardens quiet grace, painting the earth with colors born of 
-                                 sunlight and springs embrace. Each petal holds a promise of beauty,
-                                fleeting yet forever felt.</p>
+                             <h3 class="name">Heart</h3>
+                             <p class="text">A heart crochet is love stitched into every loop,
+                                 a handmade hug that lasts forever. Soft, simple, and full of warmth,
+                                  it carries the charm of care in every thread.</p>
                         </li> <li class="menu-item">
-                            <img src="images/Blooming Tulip.jpg" alt="first product"
+                            <img src="images/sunflower.jpg" alt="fifth product"
                              class="menu-image">
-                             <h3 class="name">Blooming Tulip</h3>
-                             <p class="text">Tulips bloom like
-                                 whispered dreams in the gardens quiet grace, painting the earth with colors born of 
-                                 sunlight and springs embrace. Each petal holds a promise of beauty,
-                                fleeting yet forever felt.</p>
+                             <h3 class="name">Sunflower</h3>
+                             <p class="text">Sunflower crochet bursts with joy, weaving sunshine into every stitch and
+                                 spreading warmth like a summer day.A handmade bloom that never
+                                 fades, it brings cheer wherever it rests.</p>
                         </li>
 
                     </ul>
