--- a/index.html
+++ b/index.html
@@ -27,23 +27,23 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link">About</a>
+                    <a href="#about" class="nav-link">About</a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Menu</a>
+                    <a href="#product" class="nav-link">Product</a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Testimonials</a>
+                    <a href="#testimonials" class="nav-link">Testimonials</a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Gallery</a>
+                    <a href="#gallery" class="nav-link">Gallery</a>
                 </li>
 
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
+                    <a href="#contact" class="nav-link">Contact</a>
                 </li>
             </ul>
             <button id="menu-open-button" class="fas fa-bars"></button>
@@ -85,15 +85,16 @@
         </section>
 
         <!-- About section-->
-        <section class="about-section">
+        <section class="about-section" id="about">
             <div class="section-content">
                 <div class="about-image-wrapper">
                     <img src="images/Pic.jpg" alt="About" class="about-image">
                     </div>
                     <div class="about-details">
-                        <h2 class="section-title">About Us</h2>
-                        <p>I am a person who is positive about every aspect of life. There are many things I like to do, to see, and to experience. I like to read, I like to write; I like to think,
-                             I like to dream; I like to talk, I like to listen.</p>
+                        <h2 class="section-title">About Me</h2>
+                        <p>Hi there! I’m someone who sees beauty in the little things especially yarn, hooks, and the magic that happens between them. Crocheting isn’t just a craft for me; it’s a part of who I am.
+                             It calms my mind, sparks my creativity, and brings joy with every finished piece. I love turning simple threads into something meaningful—something made with love, care, and a whole lot of heart. Whether it's a cozy blanket or a tiny keychain,
+                              each creation has a story, and I’m always excited to share it. Welcome to my little corner of creativity!</p>
                         <div class="social-link-list">
                             <a href="a" class="social-link"><i class="fa-brands fa-facebook"></i></a>
                             <a href="a" class="social-link"><i class="fa-brands fa-instagram"></i></a>
@@ -104,7 +105,7 @@
         </section>
 
         <!-- Menu section-->
-        <section class="menu-section">
+        <section class="menu-section" id="product">
                 <h2 class="section-title">Our Product</h2>
                 <div class="section-content"> 
                     <ul class="menu-list">
@@ -157,7 +158,7 @@
         </section>
 
         <!--Testimonials section-->
-        <section class="testimonials-section">
+        <section class="testimonials-section" id="testimonials">
             <h2 class="section-title">Testimonials</h2>
             <div class="section-content">
             <div class="slider-container swiper">
@@ -207,6 +208,95 @@
  </div>
 
         </section>
+
+        <!--Gallery section-->
+        <section class="gallery-section" id="gallery">
+            <h2 class="section-title">Gallery</h2>
+            <div class="section-content">
+                <ul class="gallery-list">
+                    <li class="gallery-item">
+                        <img src="images/Gallery1.jpg" alt="Gallery1" class="gallery-image">
+                    </li>
+                      <li class="gallery-item">
+                        <img src="images/Gallery2.jpg" alt="Gallery2" class="gallery-image">
+                    </li>
+                      <li class="gallery-item">
+                        <img src="images/Gallery3.jpg" alt="Gallery3" class="gallery-image">
+                    </li>
+                      <li class="gallery-item">
+                        <img src="images/Gallery4.jpg" alt="Gallery4" class="gallery-image">
+                    </li>
+                      <li class="gallery-item">
+                        <img src="images/Gallery5.jpg" alt="Gallery5" class="gallery-image">
+                    </li>
+                      <li class="gallery-item">
+                        <img src="images/Gallery6.jpg" alt="Gallery6" class="gallery-image">
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+         <!--Contact Us section-->
+         <section class="contact-section" id="contact">
+            <h2 class="section-title">Contact Us</h2>
+            <div class="section-content">
+                <ul class="contact-info-list">
+                    <li class="contact-info">
+                        <i class="fa-solid fa-location-crosshairs"></i>
+                        <p>291 Kawit Street & Rodriquez Street, Balut, Barangay 144 Tondo I, Metro Manila</p>
+                    </li>
+                    <li class="contact-info">
+                        <i class="fa-regular fa-envelope"></i>
+                        <p>amilynmaechengco@gmail.com</p>
+                    </li>
+                    <li class="contact-info">
+                        <i class="fa-solid fa-phone"></i>
+                        <p>(63)954-336-8382</p>
+                    </li>
+                    <li class="contact-info">
+                        <i class="fa-regular fa-clock"></i>
+                        <p> Monday - Friday: 10:00 AM - 8:00 PM</p>
+                    </li>
+                    <li class="contact-info">
+                        <i class="fa-regular fa-clock"></i>
+                        <p>Sunday: Closed</p>
+                    </li>
+                    <li class="contact-info">
+                        <i class="fa-solid fa-globe"></i>
+                        <p>https://www.facebook.com/Amilynmaechengco</p>
+                    </li>
+                </ul>
+                <form action="#" class="contact-form">
+                    <input type="text" placeholder="Your name" class="form-input" required>
+                    <input type="email" placeholder=" Your email" class="form-input" required>
+                    <textarea  placeholder=" Your message" class="form-input" required></textarea>
+                    <button class=" submit-button">Submit</button>
+                </form>
+            </div>
+         </section>
+
+          <!--Footer section-->
+         <footer class="footer-section">
+            <div class="section-content">
+                <p class="copyright-text">@ 2025 Crochet Shop</p>
+
+                <div class="social-link list">
+                     <div class="social-link-list">
+                            <a href="a" class="social-link"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="a" class="social-link"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="a" class="social-link"><i class="fa-brands fa-twitter"></i></a>
+                        </div>
+
+                        <p class="policy-text">
+                            <a href="#" class="policy-link">Privacy policy</a>
+                            <span class="seperator">•</span>
+                            <a href="#" class="policy-link">Refund policy</a>
+                        </p>
+
+                </div>
+            </div>
+         </footer>
+
         </main>
 
         <!--Link for swiper-->
