Add finishing touch

--- a/index.html
+++ b/index.html
@@ -96,9 +96,13 @@
                              It calms my mind, sparks my creativity, and brings joy with every finished piece. I love turning simple threads into something meaningful—something made with love, care, and a whole lot of heart. Whether it's a cozy blanket or a tiny keychain,
                               each creation has a story, and I’m always excited to share it. Welcome to my little corner of creativity!</p>
                         <div class="social-link-list">
-                            <a href="a" class="social-link"><i class="fa-brands fa-facebook"></i></a>
-                            <a href="a" class="social-link"><i class="fa-brands fa-instagram"></i></a>
-                            <a href="a" class="social-link"><i class="fa-brands fa-twitter"></i></a>
+                             <a href="https://www.facebook.com/Amilynmaechengco" class="social-link" target="_blank">
+                        <i class="fa-brands fa-facebook"></i>
+                             </a>
+                       <a href="https://www.instagram.com/_eymilyn/" class="social-link" target="_blank">
+                       <i class="fa-brands fa-instagram"></i>
+                             </a>
+                       <a href="a" class="social-link"><i class="fa-brands fa-telegram"></i></a>
                         </div>
                     </div>
             </div>
@@ -174,25 +178,25 @@
             <li class="testimonials swiper-slide ">
             <img src="images/user1.jpg" alt="User2" class="user-image">
             <h3 class="name">Angel</h3>
-            <i class="feedback">Loved the product because you can get what in the picture.</i>
+            <i class="feedback">Beautifully made and so soft. I love it</i>
             </li>
                      
             <li class="testimonials swiper-slide ">
             <img src="images/user1.jpg" alt="User3" class="user-image">
             <h3 class="name">Ashley</h3>
-            <i class="feedback">Loved the product because you can get what in the picture.</i>
+            <i class="feedback">The crochet heart was the perfect gift. So cute!</i>
             </li>
 
             <li class="testimonials swiper-slide ">
             <img src="images/user1.jpg" alt="User4" class="user-image">
             <h3 class="name">Ewan</h3>
-            <i class="feedback">Loved the product because you can get what in the picture.</i>
+            <i class="feedback">Fast delivery and amazing craftsmanship!</i>
             </li>
 
             <li class="testimonials swiper-slide ">
             <img src="images/user1.jpg" alt="User5" class="user-image">
             <h3 class="name">Nato</h3>
-            <i class="feedback">Loved the product because you can get what in the picture.</i>
+            <i class="feedback">I keep coming back for more. Absolutely adorable!</i>
             </li>          
         </ul>
 
