--- a/index.html
+++ b/index.html
@@ -170,15 +170,15 @@
             <ul class="testimonials-list swiper-wrapper">
 
             <li class="testimonials swiper-slide ">
-            <img src="images/user1.jpg" alt="User1" class="user-image">
+            <img src="images/Test1.jpg" alt="User1" class="user-image">
             <h3 class="name">Bea</h3>
             <i class="feedback">Loved the product because it looks exactly like the picture.</i>
             </li>
 
             <li class="testimonials swiper-slide ">
-            <img src="images/user1.jpg" alt="User2" class="user-image">
+            <img src="images/Test2.jpg" alt="User2" class="user-image">
             <h3 class="name">Angel</h3>
-            <i class="feedback">Beautifully made and so soft. I love it</i>
+            <i class="feedback">Beautifully made and so soft.</i>
             </li>
                      
             <li class="testimonials swiper-slide ">
