--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
 
                  <div class="buttons">
 
-                    <a href="#" class="button order-now">Order Now</a>
+                    <a href="https://www.facebook.com/Amilynmaechengco" target="_blank" class="button order-now">Order Now</a>
 
-                    <a href="#" class="button contact-us">Contact Us</a>
+                    <a href="https://www.facebook.com/Amilynmaechengco" target="_blank" class="button contact-us">Contact Us</a>
 
+ 
                  </div>
                 </div>
                 <div class="hero image wrapper">
